include/ukv/db.h

/*********************************************************/
/*****************   Structures & Consts  ****************/
/*********************************************************/

/**
 * @brief Opaque multi-modal Database handle.
 * @see `ukv_database_free()`.
 *
 * Properties:
 * - Thread safety: Safe to use across threads after open and before free.
 * - Lifetime: Must live longer than all the transactions.
 *
 * ## Concurrency
 *
 * In embedded setup this handle manages the lifetime of the database.
 * In that case user must guarantee, that concurrent processes won't be
 * opening the same database (generally same directory).
 *
 * In standalone "client-server" setup, manages the lifetime of the "client".
 * Many concurrent clients can be connecting to the same server from the same
 * process.
 *
 * ## Collections
 *
 * Every database always has at least one collection - the `::ukv_collection_main_k`.
 * That one has no name and can't be deleted. Others are referenced by names.
 * The same database can have many collections, of different modalities:
 * - Binary Large Objects or BLOBs.
 * - Hierarchical documents, like JSONs, BSONs, MessagePacks.
 * - Discrete labeled and potentially directed Graphs.
 * - Paths or collections of string keys.
 *
 * ## Choosing the Engine
 *
 * Dynamic dispatch of engines isn't yet supported.
 *
 * ## CAP Theorem
 *
 * Distributed engines are not yet supported.
 */
typedef void* ukv_database_t;
/**
 * @brief Opaque Transaction handle.
 * @see `ukv_transaction_free()`.
 * @see https://unum.cloud/ukv/c#transactions
 *
 * Allows ACID-ly grouping operations across different collections and even modalities.
 * This means, that the same transaction might be:
 * - inserting a blob of media data into a collection of images.
 * - updating users metadata in a documents collection to reference new avatar.
 * - introducing links between the user and other in a graph collection...
 * and all of the operations here either succeed or fail together. DBMS will
 * do the synchronization heavy-lifting, so you don't have to.
 *
 * Properties:
 * - Thread safety: None.
 * - Lifetime: Must be freed before the @c ukv_database_t is closed.
 * - Concurrency Control: Optimistic.
 */
typedef void* ukv_transaction_t;
/**
 * @brief Monotonically increasing unique identifier that reflects the order of applied transactions
 */
typedef uint64_t ukv_sequence_number_t;
/**
 * @brief Owning error message string.
 * If not null, must be deallocated via `ukv_error_free()`.
 */
typedef char const* ukv_error_t;
/**
 * @brief Temporary memory handle, used mostly for read requests.
 * It's allocated, resized and deallocated only by UKV itself.
 * Once done, must be deallocated with `ukv_arena_free()`.
 * @see `ukv_arena_free()`.
 */
typedef void* ukv_arena_t;
typedef enum {

    ukv_options_default_k = 0,
    /**
     * @brief Forces absolute consistency on the write operations
     * flushing all the data to disk after each write. It's usage
     * may cause severe performance degradation in some implementations.
     * Yet the users must be warned, that modern IO drivers still often
     * can't guarantee that everything will reach the disk.
     */
    ukv_option_write_flush_k = 1 << 1,
    /**
     * @brief When reading from a transaction, we track the requested keys.
     * If the requested key was updated since the read, the transaction
     * will fail on commit or prior to that. This option disables collision
     * detection on separate parts of transactional reads and writes.
     */
    ukv_option_transaction_dont_watch_k = 1 << 2,
    /**
     * @brief On every API call, the arena is cleared for reuse.
     * If the arguments of the function are results of another UKV call,
     * you can use this flag to avoid discarding the memory.
     */
    ukv_option_dont_discard_memory_k = 1 << 4,
    /**
     * @brief Will output data into shared memory, not the one privately
     * to do further transformations without any copies.
     * Is relevant for standalone distributions used with drivers supporting
     * Apache Arrow buffers or standardized Tensor representations.
     */
    ukv_option_read_shared_memory_k = 1 << 5,
    /**
     * @brief When set, the underlying engine may avoid strict keys ordering
     * and may include irrelevant (deleted & duplicate) keys in order to maximize
     * throughput. The purpose is not accelerating the `ukv_scan()`, but the
     * following `ukv_read()`. Generally used for Machine Learning applications.
     */
    ukv_option_scan_bulk_k = 0, // TODO

} ukv_options_t;
/*********************************************************/
/*****************		Transactions	  ****************/
/*********************************************************/

/**
 * @brief Begins a new ACID transaction or resets an existing one.
 * @see `ukv_transaction_init()`.
 */
typedef struct ukv_transaction_init_t {

    /** @brief Already open database instance. */
    ukv_database_t db;
    /** @brief Pointer to exported error message. */
    ukv_error_t* error;

    /**
     * @brief Transaction options.
     *
     * Possible values:
     * - `::ukv_option_dont_discard_memory_k`: Won't reset the `arena` before the operation begins.
     */
    ukv_options_t options;

    /** @brief In-out transaction handle. */
    ukv_transaction_t* transaction;
} ukv_transaction_init_t;
/**
 * @brief Begins a new ACID transaction or resets an existing one.
 * @see `ukv_transaction_init_t`.
 */
void ukv_transaction_init(ukv_transaction_init_t*);
/**
 * @brief Stages an ACID transaction for Two Phase Commits.
 * @see `ukv_transaction_stage()`.
 *
 * Regardless of result, the content is preserved to allow further
 * logging, serialization or retries. The underlying memory can be
 * cleaned and reused by consecutive `ukv_transaction_init()` call.
 */
typedef struct ukv_transaction_stage_t {

    /** @brief Already open database instance. */
    ukv_database_t db;
    /** @brief Pointer to exported error message. */
    ukv_error_t* error;
    /** @brief Initialized transaction handle. */
    ukv_transaction_t transaction;
    /** @brief Staging options. */
    ukv_options_t options;
    /** @brief Optional output for the transaction stage sequence number. */
    ukv_sequence_number_t* sequence_number;

} ukv_transaction_stage_t;
/**
 * @brief Stages an ACID transaction for Two Phase Commits.
 * @see `ukv_transaction_stage_t`.
 */
void ukv_transaction_stage(ukv_transaction_stage_t*);
/**
 * @brief Commits an ACID transaction.
 * @see `ukv_transaction_commit()`.
 *
 * Regardless of result, the content is preserved to allow further
 * logging, serialization or retries. The underlying memory can be
 * cleaned and reused by consecutive `ukv_transaction_init()` call.
 */
typedef struct ukv_transaction_commit_t {

    /** @brief Already open database instance. */
    ukv_database_t db;
    /** @brief Pointer to exported error message. */
    ukv_error_t* error;
    /** @brief Initialized transaction handle. */
    ukv_transaction_t transaction;
    /** @brief Staging options. */
    ukv_options_t options;
    /** @brief Optional output for the transaction commit sequence number. */
    ukv_sequence_number_t* sequence_number;

} ukv_transaction_commit_t;
/**
 * @brief Commits an ACID transaction.
 * @see `ukv_transaction_commit_t`.
 */
void ukv_transaction_commit(ukv_transaction_commit_t*);
/*********************************************************/
/*****************	 Memory Reclamation   ****************/
/*********************************************************/

/**
 * @brief Deallocates reusable memory arenas.
 * Passing NULLs is safe.
 */
void ukv_arena_free(ukv_arena_t);
/**
 * @brief Resets the transaction and deallocates the underlying memory.
 * Passing NULLs is safe.
 */
void ukv_transaction_free(ukv_transaction_t);
/**
 * @brief Closes the DB and deallocates used memory.
 * The database would still persist on disk.
 * Passing NULLs is safe.
 */
void ukv_database_free(ukv_database_t);
/**
 * @brief Deallocates error messages.
 * Passing NULLs is safe.
 */
void ukv_error_free(ukv_error_t);