rust/src/ukv/bindings.rs

#[doc = " @brief Begins a new ACID transaction or resets an existing one.\n @see `ukv_transaction_init()`."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ukv_transaction_init_t {
	#[doc = " @brief Already open database instance."]
	pub db: ukv_database_t,
	#[doc = " @brief Pointer to exported error message."]
	pub error: *mut ukv_error_t,
	#[doc = " @brief Transaction options.\n\n Possible values:\n - `::ukv_option_dont_discard_memory_k`: Won't reset the `arena` before the operation begins."]
	pub options: ukv_options_t,
	#[doc = " @brief In-out transaction handle."]
	pub transaction: *mut ukv_transaction_t,
}
#[test]
fn bindgen_test_layout_ukv_transaction_init_t() {
	const UNINIT: ::std::mem::MaybeUninit<ukv_transaction_init_t> =
		::std::mem::MaybeUninit::uninit();
	let ptr = UNINIT.as_ptr();
	assert_eq!(
		::std::mem::size_of::<ukv_transaction_init_t>(),
		32usize,
		concat!("Size of: ", stringify!(ukv_transaction_init_t))
	);
	assert_eq!(
		::std::mem::align_of::<ukv_transaction_init_t>(),
		8usize,
		concat!("Alignment of ", stringify!(ukv_transaction_init_t))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).db) as usize - ptr as usize },
		0usize,
		concat!("Offset of field: ", stringify!(ukv_transaction_init_t), "::", stringify!(db))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
		8usize,
		concat!("Offset of field: ", stringify!(ukv_transaction_init_t), "::", stringify!(error))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).options) as usize - ptr as usize },
		16usize,
		concat!("Offset of field: ", stringify!(ukv_transaction_init_t), "::", stringify!(options))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).transaction) as usize - ptr as usize },
		24usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_transaction_init_t),
			"::",
			stringify!(transaction)
		)
	);
}
extern "C" {
	#[doc = " @brief Begins a new ACID transaction or resets an existing one.\n @see `ukv_transaction_init_t`."]
	pub fn ukv_transaction_init(arg1: *mut ukv_transaction_init_t);
}
#[doc = " @brief Stages an ACID transaction for Two Phase Commits.\n @see `ukv_transaction_stage()`.\n\n Regardless of result, the content is preserved to allow further\n logging, serialization or retries. The underlying memory can be\n cleaned and reused by consecutive `ukv_transaction_init()` call."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ukv_transaction_stage_t {
	#[doc = " @brief Already open database instance."]
	pub db: ukv_database_t,
	#[doc = " @brief Pointer to exported error message."]
	pub error: *mut ukv_error_t,
	#[doc = " @brief Initialized transaction handle."]
	pub transaction: ukv_transaction_t,
	#[doc = " @brief Staging options."]
	pub options: ukv_options_t,
	#[doc = " @brief Optional output for the transaction stage sequence number."]
	pub sequence_number: *mut ukv_sequence_number_t,
}
#[test]
fn bindgen_test_layout_ukv_transaction_stage_t() {
	const UNINIT: ::std::mem::MaybeUninit<ukv_transaction_stage_t> =
		::std::mem::MaybeUninit::uninit();
	let ptr = UNINIT.as_ptr();
	assert_eq!(
		::std::mem::size_of::<ukv_transaction_stage_t>(),
		40usize,
		concat!("Size of: ", stringify!(ukv_transaction_stage_t))
	);
	assert_eq!(
		::std::mem::align_of::<ukv_transaction_stage_t>(),
		8usize,
		concat!("Alignment of ", stringify!(ukv_transaction_stage_t))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).db) as usize - ptr as usize },
		0usize,
		concat!("Offset of field: ", stringify!(ukv_transaction_stage_t), "::", stringify!(db))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
		8usize,
		concat!("Offset of field: ", stringify!(ukv_transaction_stage_t), "::", stringify!(error))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).transaction) as usize - ptr as usize },
		16usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_transaction_stage_t),
			"::",
			stringify!(transaction)
		)
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).options) as usize - ptr as usize },
		24usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_transaction_stage_t),
			"::",
			stringify!(options)
		)
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).sequence_number) as usize - ptr as usize },
		32usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_transaction_stage_t),
			"::",
			stringify!(sequence_number)
		)
	);
}
extern "C" {
	#[doc = " @brief Stages an ACID transaction for Two Phase Commits.\n @see `ukv_transaction_stage_t`."]
	pub fn ukv_transaction_stage(arg1: *mut ukv_transaction_stage_t);
}
#[doc = " @brief Commits an ACID transaction.\n @see `ukv_transaction_commit()`.\n\n Regardless of result, the content is preserved to allow further\n logging, serialization or retries. The underlying memory can be\n cleaned and reused by consecutive `ukv_transaction_init()` call."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ukv_transaction_commit_t {
	#[doc = " @brief Already open database instance."]
	pub db: ukv_database_t,
	#[doc = " @brief Pointer to exported error message."]
	pub error: *mut ukv_error_t,
	#[doc = " @brief Initialized transaction handle."]
	pub transaction: ukv_transaction_t,
	#[doc = " @brief Staging options."]
	pub options: ukv_options_t,
	#[doc = " @brief Optional output for the transaction commit sequence number."]
	pub sequence_number: *mut ukv_sequence_number_t,
}
#[test]
fn bindgen_test_layout_ukv_transaction_commit_t() {
	const UNINIT: ::std::mem::MaybeUninit<ukv_transaction_commit_t> =
		::std::mem::MaybeUninit::uninit();
	let ptr = UNINIT.as_ptr();
	assert_eq!(
		::std::mem::size_of::<ukv_transaction_commit_t>(),
		40usize,
		concat!("Size of: ", stringify!(ukv_transaction_commit_t))
	);
	assert_eq!(
		::std::mem::align_of::<ukv_transaction_commit_t>(),
		8usize,
		concat!("Alignment of ", stringify!(ukv_transaction_commit_t))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).db) as usize - ptr as usize },
		0usize,
		concat!("Offset of field: ", stringify!(ukv_transaction_commit_t), "::", stringify!(db))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
		8usize,
		concat!("Offset of field: ", stringify!(ukv_transaction_commit_t), "::", stringify!(error))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).transaction) as usize - ptr as usize },
		16usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_transaction_commit_t),
			"::",
			stringify!(transaction)
		)
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).options) as usize - ptr as usize },
		24usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_transaction_commit_t),
			"::",
			stringify!(options)
		)
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).sequence_number) as usize - ptr as usize },
		32usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_transaction_commit_t),
			"::",
			stringify!(sequence_number)
		)
	);
}
extern "C" {
	#[doc = " @brief Commits an ACID transaction.\n @see `ukv_transaction_commit_t`."]
	pub fn ukv_transaction_commit(arg1: *mut ukv_transaction_commit_t);
}
extern "C" {
	#[doc = " @brief Deallocates reusable memory arenas.\n Passing NULLs is safe."]
	pub fn ukv_arena_free(arg1: ukv_arena_t);
}
extern "C" {
	#[doc = " @brief Resets the transaction and deallocates the underlying memory.\n Passing NULLs is safe."]
	pub fn ukv_transaction_free(arg1: ukv_transaction_t);
}
extern "C" {
	#[doc = " @brief Closes the DB and deallocates used memory.\n The database would still persist on disk.\n Passing NULLs is safe."]
	pub fn ukv_database_free(arg1: ukv_database_t);
}
extern "C" {
	#[doc = " @brief Deallocates error messages.\n Passing NULLs is safe."]
	pub fn ukv_error_free(arg1: ukv_error_t);
}
pub type __builtin_va_list = *mut ::std::os::raw::c_char;
